--- a/Leksjon7/Makefile
+++ b/Leksjon7/Makefile
@@ -4,20 +4,20 @@ INCLDIR = ./include
 CC = gcc
 CFLAGS = -O2
 CFLAGS += -I $(INCLDIR)
-#CFLAGS += -std=c89
+CFLAGS += -std=c89
 
 OBJDIR = obj
 
 _DEPS = source.h
 DEPS = $(patsubst %,$(INCLDIR)/%,$(_DEPS))
 
-_OBJS = o4.o
+_OBJS = o2.o
 OBJS = $(patsubst %,$(OBJDIR)/%,$(_OBJS))
 
 $(OBJDIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-o4: $(OBJS)
+o2: $(OBJS)
 	gcc -o $@ $^ $(CFLAGS)
 
 .PHONY: clean
