Previous exam task o6.c

--- a/Leksjon8/Makefile
+++ b/Leksjon8/Makefile
@@ -5,20 +5,20 @@ CC = gcc
 CFLAGS = -O2
 CFLAGS += -I $(INCLDIR)
 CFLAGS += -lpthread
-#CFLAGS += -std=c89
+CFLAGS += -std=c89
 
 OBJDIR = obj
 
 _DEPS = default.h
 DEPS = $(patsubst %,$(INCLDIR)/%,$(_DEPS))
 
-_OBJS = o5.o
+_OBJS = o6.o
 OBJS = $(patsubst %,$(OBJDIR)/%,$(_OBJS))
 
 $(OBJDIR)/%.o: %.c $(DEPS) 
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-o5: $(OBJS)
+o6: $(OBJS)
 	gcc -o $@ $^ $(CFLAGS)
 
 .PHONY: clean
