Tested exam format. Worked on session exercises for session 9.

--- a/template/Makefile
+++ b/template/Makefile
@@ -4,21 +4,20 @@ INCLDIR = ./include
 CC = gcc
 CFLAGS = -O2
 CFLAGS += -I $(INCLDIR)
-CFLAGS += -lpthread
-CFLAGS += -std=c89
+#CFLAGS += -std=c89
 
 OBJDIR = obj
 
-_DEPS = default.h
+_DEPS = source.h
 DEPS = $(patsubst %,$(INCLDIR)/%,$(_DEPS))
 
-_OBJS = o2.o
+_OBJS = o3.o
 OBJS = $(patsubst %,$(OBJDIR)/%,$(_OBJS))
 
-$(OBJDIR)/%.o: %.c $(DEPS) 
+$(OBJDIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-o2: $(OBJS)
+o3: $(OBJS)
 	gcc -o $@ $^ $(CFLAGS)
 
 .PHONY: clean
