Attempting to make menu interface functional.

--- a/ExamPrep/code/Makefile
+++ b/ExamPrep/code/Makefile
@@ -8,16 +8,16 @@ CFLAGS += -std=c89
 
 OBJDIR = obj
 
-_DEPS = menu.h debug.h
+_DEPS = menu.h debug.h 
 DEPS = $(patsubst %,$(INCLDIR)/%,$(_DEPS))
 
-_OBJS = menu.o debug.o
+_OBJS = main.o menu.o debug.o
 OBJS = $(patsubst %,$(OBJDIR)/%,$(_OBJS))
 
 $(OBJDIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-menu: $(OBJS)
+main: $(OBJS)
 	gcc -o $@ $^ $(CFLAGS)
 
 .PHONY: clean
