--- a/ExamPrep/code/server/makefile
+++ b/ExamPrep/code/server/makefile
@@ -1,27 +1,26 @@
 #Makefile template
-
+TARGET = server 
+LIBRARY = ../bexam_lib/bexamlib.a
 INCLDIR = ./include
 CC = gcc
 CFLAGS = -O2
 CFLAGS += -I $(INCLDIR)
-# -lsocket, -lsockets (for server)
 CFLAGS += -std=c89
-CFLAGS += -Wpedantic
 CFLAGS += -Wall
 
 OBJDIR = obj
 
-_DEPS = debug.h server.h 
+_DEPS = $(addsuffix .h, $(TARGET))
 DEPS = $(patsubst %,$(INCLDIR)/%,$(_DEPS))
 
-_OBJS =  debug.o server.o
+_OBJS = $(addsuffix .o, $(TARGET))
 OBJS = $(patsubst %,$(OBJDIR)/%,$(_OBJS))
 
 $(OBJDIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-main: $(OBJS)
-	gcc -o $@ $^ $(CFLAGS)
+$(TARGET): $(OBJS)
+	gcc -o $@ $^ $(CFLAGS) $(LIBRARY)
 
 .PHONY: clean
 clean:
